kubernetes/kubernetes-certified-application-developer/section_7/ingress-task-2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-space-ingress
  namespace: app-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /wear
            backend:
              serviceName: wear-service
              servicePort: 8080
          - path: /watch
            backend:
              serviceName: video-service
              servicePort: 8080
